kubernetes/flux/clusters/talos-cluster/apps/7dtd-server-maple/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: loadbalancer
  namespace: 7dtd-server-maple
spec:
  type: LoadBalancer
  loadBalancerIP: 172.21.0.173
  selector:
    app: 7dtd-server
  ports:
  - name: game-tcp
    port: 26903
    targetPort: 26900
    protocol: TCP
  - name: game-udp-0
    port: 26903
    targetPort: 26900
    protocol: UDP
  - name: game-udp-1
    port: 26904
    targetPort: 26901
    protocol: UDP
  - name: game-udp-2
    port: 26905
    targetPort: 26902
    protocol: UDP
  - name: webadmin
    port: 8080
    targetPort: 8080
    protocol: TCP
  - name: telnet
    port: 8081
    targetPort: 8081
    protocol: TCP
  - name: webserver
    port: 8082
    targetPort: 8082
    protocol: TCP
