kubernetes/flux/clusters/talos-cluster/apps/7dtd-server-maple/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: http
  namespace: 7dtd-server-maple
spec:
  entryPoints:
  - web
  routes:
  - match: Host(`maple.7dtd.homelab.emerconnelly.com`)
    kind: Rule
    middlewares:
    - name: https-redirect
      namespace: traefik
    services:
    - name: noop@internal
      kind: TraefikService
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: https
  namespace: 7dtd-server-maple
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`maple.7dtd.homelab.emerconnelly.com`)
    kind: Rule
    services:
    - name: loadbalancer
      port: 8080
      passHostHeader: true
      sticky:
        cookie:
          name: traefik
          secure: true
          httpOnly: true
          sameSite: lax
  tls:
    secretName: ingress-tls
